--- a/index.html
+++ b/index.html
@@ -8,7 +8,11 @@
 	<link rel="stylesheet" href="style.css">
 </head>
 <body>
-	<h1 class="hello" id="title">Grab me!</h1>
+	<form id="login-form">
+		<input required maxlength="15" type="text" placeholder="What is your name?" />
+		<input type="submit" value="Log In" />
+	</form>
+	<h1 id="greeting" class="hidden"></h1>
 	<script src="app.js"></script>
 </body>
 </html>
