--- a/index.html
+++ b/index.html
@@ -5,14 +5,45 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Momentum App</title>
-	<link rel="stylesheet" href="style.css">
+	<link rel="preconnect" href="https://fonts.googleapis.com">
+	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+	<link rel="stylesheet" href="/css/style.css">
+	<script src="https://kit.fontawesome.com/f12304c118.js" crossorigin="anonymous"></script>
 </head>
 <body>
+	<!-- 사용자 등록 -->
 	<form id="login-form" class="hidden">
 		<input required maxlength="15" type="text" placeholder="What is your name?" />
 		<input type="submit" value="Log In" />
 	</form>
-	<h1 id="greeting" class="hidden"></h1>
-	<script src="app.js"></script>
+
+	<!-- To Do List -->
+	<form id="todo-form">
+		<input type="text" placeholder="Write a To Do and Press Enter">
+	</form>
+	<ul id="todo-list"></ul>
+
+	<!-- 시간 -->
+	<h2 id="clock">00:00</h2>
+	<!-- 사용자 -->
+	<h1 class="hidden" id="greeting"></h1>
+	<!-- 명언 -->
+	<div id="quote">
+		<span></span>
+		<br>
+		<span></span>
+	</div>
+	<!-- 날씨 영역 -->
+	<div id="weather">
+		<span></span>
+		<span></span>
+	</div>
+
+	<script src="./js/clock.js"></script>
+	<script src="./js/greetings.js"></script>
+	<script src="./js/quotes.js"></script>
+	<script src="./js/background.js"></script>
+	<script src="./js/todo.js"></script>
+	<script src="./js/weather.js"></script>
 </body>
 </html>
