--- a/index.html
+++ b/index.html
@@ -49,6 +49,7 @@
 	</div>
 	
 
+	<script src="./KEY/weather_key.js"></script>
 	<script src="./js/clock.js"></script>
 	<script src="./js/greetings.js"></script>
 	<script src="./js/quotes.js"></script>
